[gd_scene load_steps=6 format=3 uid="uid://bvdfwmpvqi480"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_gly4n"]
[ext_resource type="PackedScene" uid="uid://yfo0sq53dpj0" path="res://scenes/weapons/katana.tscn" id="2_gtmbk"]
[ext_resource type="Script" path="res://scripts/rope.gd" id="3_keekn"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_80aj8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gl4la"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 15
platform_floor_layers = 4294967291
script = ExtResource("1_gly4n")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_80aj8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_gl4la")

[node name="Camera" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.520331, 0)

[node name="Katana" parent="Camera" instance=ExtResource("2_gtmbk")]
unique_name_in_owner = true
visible = false

[node name="CameraRay" type="RayCast3D" parent="Camera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.79528)
target_position = Vector3(0, -100, 0)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="Rope" type="Node3D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_keekn")

[node name="CancelMomentumTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="DamageCooldown" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="CancelMomentumTimer" to="." method="_on_cancel_momentum_timer_timeout"]
[connection signal="timeout" from="DamageCooldown" to="." method="_on_damage_cooldown_timeout"]
